# minidispatch

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
examples/: local_config.yaml  local_tasks.yaml  slurm_config.yaml  slurm_lammps.yaml  slurm_tasks.yaml
src/minidispatch/: __init__.py  _logging.py  backend.py  cli.py  context.py  job.py  models.py  status.py  submission.py
src/minidispatch/backends/: __init__.py  shell.py  slurm.py
src/minidispatch/contexts/: __init__.py  local.py  ssh.py
test_slurm/my_lmp/task_lmp/: SPCE_water.data  log  log.lammps  water_lammps.inp
test_slurm/my_work/task_000/: log
test_slurm/my_work/task_001/: log
tests/: conftest.py  test_cli.py  test_context.py  test_models.py  test_shell.py  test_ssh.py  test_submission.py
